--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/firebase": "^2.4.32",
     "@types/node": "^22.7.4",
     "nodemon": "^3.1.7",
     "pug": "^3.0.3",
