--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
+    "mybatis-mapper": "^0.8.0",
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
