--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p ./tsconfig.json"
+    "build": "tsc -p ./tsconfig.json",
+    "swagger" : "swagger-typescript-api -p ./swagger.json -o ./src/api-client --axios --extract-request-body --extract-response-body --extract-response-error"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +20,8 @@
     "firebase-admin": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
     "mybatis-mapper": "^0.8.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "swagger-typescript-api": "^13.0.22"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
